# NEXUS-The-AI-Fairness-Immunity-Layer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  adversarial_stress_test_report.json  docker-compose.yml  live_demo_orchestrator.py  omega_stress_test_report.json  omega_test_terminal.txt  pyrightconfig.json  stress_test_terminal.txt
.github/workflows/: ci.yml
apps/mobile/: pubspec.yaml
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  firebase.ts  index.css  main.tsx
scripts/: adversarial_stress_test.py  check_health.sh  e2e_latency_profiler.py  live_demo_orchestrator.py  omega_stress_test.py  run_simulation.py  seed_hiring_bias.py  seed_insights.py  update_readme_stress_results.py  verify_outputs.py  wait_for_health.sh
sdk/python/: pyproject.toml
sdk/python/examples/: hiring_model_intercept.py
services/causal-engine/: Dockerfile  requirements.txt
services/federated-aggregator/: Dockerfile  requirements.txt
services/gateway/: Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.json
services/interceptor/: Dockerfile  pyrightconfig.json  requirements.txt
services/prediction-engine/: Dockerfile  requirements.txt
services/regulatory-intelligence/: Dockerfile  requirements.txt
services/remediation/: Dockerfile  requirements.txt
services/vault/: Dockerfile  nexus-data.txt  package-lock.json  package.json  tsconfig.json
shared/python/: pyproject.toml
shared/python/nexus_types/: __init__.py  models.py
tests/integration/: test_end_to_end.py
(+103 files in other folders)
