[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-types"
version = "1.0.0"
description = "Shared Pydantic models for NEXUS platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["nexus_types*"]
